fix: card-menu (truncate)

--- a/frontend/src/app/modules/container/components/card-menu/card-menu.component.scss
+++ b/frontend/src/app/modules/container/components/card-menu/card-menu.component.scss
@@ -6,9 +6,16 @@
 .card-text {
   margin: 0;
   padding: 0 .2rem 0 0;
-  font-size: .65rem;
-  line-height: 0.7rem;
+  font-size: .7rem;
+  line-height: 0.75rem;
   color: grey;
+}
+
+@media screen and (min-width: 768px) {
+  .card-text {
+    font-size: .95rem;
+    line-height: 1.05rem;
+  }
 }
 
 
